--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,6 +5,7 @@
 @import url("animations.css");
 @import url("hamburger.css");
 @import url("preloader.css");
+@import url("popup.css");
 
 body {
     background-color: var(--color-background-light);
